# genai-mcp-build-custom-tools-python

./: .gitignore  README.adoc
.devcontainer/: devcontainer.json  post_create.sh
assets/: mcp.json
client/: pyproject.toml
solutions/: mcp.json
solutions/10c-paginated-tool/: main.py
solutions/2c-add-neo4j-connection/: main.py
solutions/3c-create-first-server/: main.py  pyproject.toml
solutions/6c-build-database-tool/: main.py
solutions/8c-create-resource/: main.py  pyproject.toml
solutions/server/: main.py  pyproject.toml
solutions/strawberry/: main.py
