[project]
name = "mcp-client"
version = "0.1.0"
description = "MCP Client for connecting to MCP servers and listing tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.17.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

